--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src\assets\lycian-temple.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Tiny5&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React + TS</title>
+    <title>LYCIAN</title>
   </head>
   <body>
     <div id="root"></div>
